fixed login spacing

--- a/client/src/components/FlightCard/style.scss
+++ b/client/src/components/FlightCard/style.scss
@@ -30,7 +30,7 @@ $malbec: #351f39;
 
 
 
-.card{    
+.flightCard{    
     background: rgb(83,77,108);
     background: linear-gradient(165deg, rgba(83,77,108,1) 0%, rgba(114,106,149,1) 1%, rgba(114,137,132,1) 3%, rgba(146,177,175,1) 11%, rgba(173,208,198,1) 30%, rgba(218,243,236,1) 72%, rgba(245,248,247,0.5290849616213673) 100%);
     width: 75%;
